--- a/airlines/ZIPAIR/ZIPAIR.html
+++ b/airlines/ZIPAIR/ZIPAIR.html
@@ -60,7 +60,7 @@
               <p>ZIPAIR is prepared to take you anywhere around the world! Check us out now for great prices for flights to Japan!
               </p>
             </div>
-            <a href="https://www.zipair.net/en" target="_blank" class="externalbox">Visit ZIPAIR for more information!</a>
+            <a href="https://www.zipair.net/en" target="_blank" class="externalbox">Visit ZIPAIR!</a>
           </div>
         </div>
         <footer>
