--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -11,7 +11,7 @@
         <nav>
             <a href="../index.html" class="home">Home</a>
             <a href="../HTML/airlines.html">Airlines</a>
-            <a href="/HTML/contact.html">Contact</a>
+            <a href="../HTML/contact.html">Contact</a>
         </nav>
       </div>
       <div class="split-screen">
